backend/verification: - New hashing system - Email verification
