# services/auth/docs/swagger.json
@@ -31,7 +31,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/github_com_MorozkoArt_CodeCollab_services_auth_internal_domain.LoginRequest"
+                            "$ref": "#/definitions/internal_api_http_v1.LoginRequest"
                         }
                     }
                 ],
@@ -47,7 +47,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/github_com_MorozkoArt_CodeCollab_services_auth_internal_domain.LoginResponse"
+                                            "$ref": "#/definitions/internal_api_http_v1.LoginResponse"
                                         }
                                     }
                                 }
@@ -88,7 +88,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/github_com_MorozkoArt_CodeCollab_services_auth_internal_domain.RegisterRequest"
+                            "$ref": "#/definitions/internal_api_http_v1.RegisterRequest"
                         }
                     }
                 ],
@@ -122,7 +122,7 @@
         }
     },
     "definitions": {
-        "github_com_MorozkoArt_CodeCollab_services_auth_internal_domain.LoginRequest": {
+        "internal_api_http_v1.LoginRequest": {
             "type": "object",
             "required": [
                 "email",
@@ -137,7 +137,7 @@
                 }
             }
         },
-        "github_com_MorozkoArt_CodeCollab_services_auth_internal_domain.LoginResponse": {
+        "internal_api_http_v1.LoginResponse": {
             "type": "object",
             "properties": {
                 "token": {
@@ -145,7 +145,7 @@
                 }
             }
         },
-        "github_com_MorozkoArt_CodeCollab_services_auth_internal_domain.RegisterRequest": {
+        "internal_api_http_v1.RegisterRequest": {
             "type": "object",
             "required": [
                 "email",
